--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "amqplib": "^0.10.9",
     "axios": "^1.11.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
@@ -9,7 +10,6 @@
     "mysql2": "^3.14.3",
     "node": "^24.6.0",
     "sequelize": "^6.37.7",
-    "sequelize-cli": "^6.6.3",
     "winston": "^3.17.0"
   },
   "name": "base_node_template",
@@ -21,5 +21,8 @@
     "dev": "npx nodemon src/index.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "sequelize-cli": "^6.6.3"
+  }
 }
